adding in names

--- a/Assignment_5.Rmd
+++ b/Assignment_5.Rmd
@@ -147,6 +147,9 @@ plotHeatmap -m output_matrix_part2_not_norm -o heatmap_part2_not_norm.png --hclu
 
 #?# How does this compare to the input-normalized data? Why do you think this is? - 1 pt
 
+#scores are lower overall for all calls 
+#legit because the reads are not normalized, so it's basically like comparing 
+#apples to oranges.
 
 ```
 
@@ -229,9 +232,7 @@ Please knit your Rmd file to *github_document* and include the link to the .md f
 
 # Authors and contributions
 
-Following completion of your assignment, please fill out this section with the authors and their contributions to the assignment.  If you worked alone, only the author (e.g. your name and student ID) should be included.
+Following completion of your assignment, please fill out this section with the authors and their contributions to the assignment. If you worked alone, only the author (e.g. your name and student ID) should be included.
 
-Authors: Name1 (studentID1) and Name2 (studentID2)
-
-Contributions: (example) N1 and N2 worked together on the same computer to complete the assignment. N1 typed for the first half and N2 typed for the second half. 
+Authors: Neera Patadia (79557773)
 
