--- a/Assignment_5.Rmd
+++ b/Assignment_5.Rmd
@@ -167,9 +167,15 @@ Now we want to identify enriched regions of the genome for each of our three his
 ## Tip: Make sure to read the documentation (using the -h flag) for the *masc2 callpeak* command
 ## Run the callpeak command of the macs2 tool, once for each of H3K27ac, H3K27Me3, H3K4Me3
 ## Each time, use the input as the control 
+# I am assuming this is the input_chr3_subset.bam file
 ## For H3K27Me3, you should call "broad" peaks because these signals tend to form longer domains and not acute peaks.
 #?# Type the commands you used below: - 1.5 pt
 
+macs2 callpeak -t /projects/bmeg/A5/H3K27ac_chr3_subset.bam -c /projects/bmeg/A5/input_chr3_subset.bam --outdir /home/npatadia_bmeg22/assignment5_bmeg591e/peaks/ -n H3k27ac_peaks
+
+macs2 callpeak -t /projects/bmeg/A5/H3K27me3_chr3_subset.bam -c /projects/bmeg/A5/input_chr3_subset.bam --outdir /home/npatadia_bmeg22/assignment5_bmeg591e/peaks/ -n H3K27me3_peaks --broad
+
+macs2 callpeak -t /projects/bmeg/A5/H3K4me3_chr3_subset.bam -c /projects/bmeg/A5/input_chr3_subset.bam --outdir /home/npatadia_bmeg22/assignment5_bmeg591e/peaks/ -n H3K4me3_peaks
 
 ```
 
@@ -187,17 +193,27 @@ Macs2 calls the peaks by analyzing the enrichments of sequences in the genome co
 ## Note: remember to autoscale each file track!
 ## 4. Go to this position: * chr3:44,608,952-44,670,849 *
 #?# Compare the input and H3K4me3 signal trakcs (a and b), are there regions that you consider to have an enriched signal in the H3K4me3 track compared to the input? If yes, how many?- 0.5 pt 
+#Yes, there are 2 regions that are considered to have an enriched signal in the listed region (~44,625kb and ~ 44,648kb)
+
 #?# Why do you consider those regions to have an enrichment? Would you need to confirm that the enrichment is statistically significant? If so, what do you think would be a way to test for the significance (you can mention the tools used on this assignment or explain conceptually what would you do to confirm an enrichment)? - 1 pt
+#I am considering them to be enriched because there are two clear peak shown on the browser track for the H3K4me3 subset track. Yes, you would need to test for significance, which conceptually can be done by comparing to the input chr3 file and seeing if those regions just normally have higher than normal enrichment rates in comparison to other regions along the chromosome.
+
 ## 5. Load into the same session the following files:
 ### c. H3K4me3 normalized using the input bigWig file that was pre-computed and you used on section 2
 ### d. H3K4me3 .narrowPeak file that you created in section 3a
 ## Note: remember to autoscale each file track!
 ## 6. Go to the same position as in step 4
 #?# Does the region/s you thought had an enrichment show differences between the input and the H3K4me3 mark in the bamCompare (file c)? - 0.5 pt
+There are still two peaks in the described regions, but the peaks are not as high, and appear to be wider.
+
 #?# Are these visually enriched regions you selected, found in file d (narrowPeak)? What does that mean? - 1 pt
+Yes, they are still enriched. I would take that to mean that even when taking into account the background methylation rate of the chromosome, the region still appears to be enriched, therefore suggesting that the observed enrichment in significant.
+
 #?# Add a screenshot of your IGV session right after this chunk, using Rmarkdown syntax - 1pt
+
+
 ```
-<add peak summaryhere>
+![Screenshot of IGV Session for Peak Calling](part3_screenshot.png)
 
 
 ### c. Peak enrichments
@@ -209,7 +225,13 @@ For this assignment, we are working with 3 different epigenetic marks: H3K4me3, 
 ```{bash, eval=FALSE}
 ### Create 3 heatmaps following the specifications you used on part 2 (one for the peaks called for each epigenetic mark, both containing data from all three tracks). Use the peak files of each of the epigenetic marks as reference files. Use ONLY the non-input normalized files: H3K27ac_norm.bw H3K27me3_norm.bw H3K4me3_norm.bw
 #?# Write the commands you used to compute the matrices and create the heatmaps below: - 3 pt
+
+
+
 #?# Add screenshots of the 3 heatmaps you got using the epigenetic marks' peak files as reference files. Add them after this code chunk (using Rmarkdown syntax) in the following order: H3K4me3, H3K27ac, H3K27me3 - 1.5 pt
+
+
+
 ```
 
 
