part 3 heatmaps with commands

--- a/Assignment_5.Rmd
+++ b/Assignment_5.Rmd
@@ -193,10 +193,10 @@ Macs2 calls the peaks by analyzing the enrichments of sequences in the genome co
 ## Note: remember to autoscale each file track!
 ## 4. Go to this position: * chr3:44,608,952-44,670,849 *
 #?# Compare the input and H3K4me3 signal trakcs (a and b), are there regions that you consider to have an enriched signal in the H3K4me3 track compared to the input? If yes, how many?- 0.5 pt 
-#Yes, there are 2 regions that are considered to have an enriched signal in the listed region (~44,625kb and ~ 44,648kb)
+Yes, there are 2 regions that are considered to have an enriched signal in the listed region (~44,625kb and ~ 44,648kb)
 
 #?# Why do you consider those regions to have an enrichment? Would you need to confirm that the enrichment is statistically significant? If so, what do you think would be a way to test for the significance (you can mention the tools used on this assignment or explain conceptually what would you do to confirm an enrichment)? - 1 pt
-#I am considering them to be enriched because there are two clear peak shown on the browser track for the H3K4me3 subset track. Yes, you would need to test for significance, which conceptually can be done by comparing to the input chr3 file and seeing if those regions just normally have higher than normal enrichment rates in comparison to other regions along the chromosome.
+I am considering them to be enriched because there are two clear peak shown on the browser track for the H3K4me3 subset track. Yes, you would need to test for significance, which conceptually can be done by comparing to the input chr3 file and seeing if those regions just normally have higher than normal enrichment rates in comparison to other regions along the chromosome.
 
 ## 5. Load into the same session the following files:
 ### c. H3K4me3 normalized using the input bigWig file that was pre-computed and you used on section 2
@@ -225,15 +225,19 @@ For this assignment, we are working with 3 different epigenetic marks: H3K4me3, 
 ```{bash, eval=FALSE}
 ### Create 3 heatmaps following the specifications you used on part 2 (one for the peaks called for each epigenetic mark, both containing data from all three tracks). Use the peak files of each of the epigenetic marks as reference files. Use ONLY the non-input normalized files: H3K27ac_norm.bw H3K27me3_norm.bw H3K4me3_norm.bw
 #?# Write the commands you used to compute the matrices and create the heatmaps below: - 3 pt
+computeMatrix scale-regions -S /projects/bmeg/A5/H3K4me3_norm.bw -R /home/npatadia_bmeg22/assignment5_bmeg591e/peaks/H3K4me3_peaks_peaks.narrowPeak -b 1000 -a 1000 -o H3K4me3_matrix
+computeMatrix scale-regions -S /projects/bmeg/A5/H3K27me3_norm.bw -R /home/npatadia_bmeg22/assignment5_bmeg591e/peaks/H3K27me3_peaks_peaks.broadPeak -b 1000 -a 1000 -o H3K27me3_matrix
+computeMatrix scale-regions -S /projects/bmeg/A5/H3K27ac_norm.bw -R /home/npatadia_bmeg22/assignment5_bmeg591e/peaks/H3k27ac_peaks_peaks.narrowPeak -b 1000 -a 1000 -o H3k27ac_matrix
 
-
+plotHeatmap -m H3K4me3_matrix -o H3K4me3_matrix.png --hclust 3 --colorMap 'Blues'
+plotHeatmap -m H3K27me3_matrix -o H3K27me3_matrix.png --hclust 3 --colorMap 'Blues'
+plotHeatmap -m H3k27ac_matrix -o H3k27ac_matrix.png --hclust 3 --colorMap 'Blues'
 
 #?# Add screenshots of the 3 heatmaps you got using the epigenetic marks' peak files as reference files. Add them after this code chunk (using Rmarkdown syntax) in the following order: H3K4me3, H3K27ac, H3K27me3 - 1.5 pt
-
-
-
 ```
-
+![H3K4me3](H3K4me3_matrix.png)
+![H3K27me3](H3K27me3_matrix.png)
+![H3k27ac](H3k27ac_matrix.png)
 
 
 
